objects/X7S_Shr_Custom_Field_Set__mdt/X7S_Shr_Custom_Field_Set__mdt.object-meta.xml
<CustomObject>
    <description>Custom field set</description>
    <label>7S Shr Custom Field Set</label>
    <pluralLabel>7S Shr Custom Field Sets</pluralLabel>
</CustomObject>