objects/X7S_Shr_Custom_Field_Set__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Uncheck to make field set inactive</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>