objects/X7S_Shr_Custom_Field_Set__mdt/fields/All_fields_required__c.field-meta.xml
<CustomField>
    <fullName>All_fields_required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable to make all fields required. Does not apply to checkbox fields.</inlineHelpText>
    <label>All fields required</label>
    <type>Checkbox</type>
</CustomField>